<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context="com.example.rainbowcafe.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rainbow_title"
            style="@style/text_title"
            android:layout_height="65dp"
            android:text="@string/title"
            android:background="@drawable/border_title"
            />
        <ImageView
            android:id="@+id/rainbow_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/rainbow_logo"
            android:adjustViewBounds="true"
            android:layout_marginStart="@dimen/margin_6"
            android:layout_marginEnd="@dimen/margin_6"
            android:contentDescription="@string/rainbowArt"
            />
        <TextView
            android:id="@+id/rainbow_address"
            style="@style/text_style"
            android:layout_height="90dp"
            android:text="@string/address"
            android:background="@drawable/border_address"
            android:drawableStart="@drawable/address_logo"
            android:clickable="true"
            android:focusable="true"
            />
        <TextView
            android:id="@+id/rainbow_hours"
            style="@style/text_style"
            android:layout_height="90dp"
            android:text="@string/hours"
            android:background="@drawable/border_hours"
            android:drawableStart="@drawable/hours_logo"
            />
        <TextView
            android:id="@+id/rainbow_phone"
            style="@style/text_style"
            android:layout_height="90dp"
            android:text="@string/phone"
            android:background="@drawable/border_phone"
            android:drawableStart="@drawable/phone_logo"
            android:clickable="true"
            android:focusable="true"
            />

        <TextView
            android:id="@+id/rainbow_website"
            style="@style/text_style"
            android:layout_height="90dp"
            android:background="@drawable/border_website"
            android:clickable="true"
            android:drawableStart="@drawable/website_logo"
            android:focusable="true"
            android:text="@string/website" />
    </LinearLayout>
</ScrollView>
